@@ -1,5 +1,12 @@
 16 November 2007
 
+* (nicm) switch-client command to switch client between different sessions. This
+  is pretty cool:
+
+	$ tmux bind q switch 0
+	$ tmux bind w switch 1
+
+  To switch between sessions 0 and 1 with a key :-). 
 * (nicm) Accept "-c client-tty" on command line to allow client manipulation
   commands, and change detach-/refresh-session to detach-/refresh-client (this
   loses the -a behaviour, but at some point -session versions may return, and
@@ -214,4 +221,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.69 2007-11-16 21:12:31 nicm Exp $
+$Id: CHANGES,v 1.70 2007-11-16 21:31:03 nicm Exp $
